// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nuxt GraphQL Request SSR 1`] = `
"<div id=\\"__layout\\"><div><h2>Countries</h2> <ul><li>
      Andorra
    </li><li>
      Austria
    </li><li>
      Åland
    </li><li>
      Belgium
    </li><li>
      Saint Barthélemy
    </li><li>
      Cyprus
    </li><li>
      Germany
    </li><li>
      Estonia
    </li><li>
      Spain
    </li><li>
      Finland
    </li><li>
      France
    </li><li>
      French Guiana
    </li><li>
      Guadeloupe
    </li><li>
      Greece
    </li><li>
      Ireland
    </li><li>
      Italy
    </li><li>
      Lithuania
    </li><li>
      Luxembourg
    </li><li>
      Latvia
    </li><li>
      Monaco
    </li><li>
      Montenegro
    </li><li>
      Saint Martin
    </li><li>
      Martinique
    </li><li>
      Malta
    </li><li>
      Netherlands
    </li><li>
      Saint Pierre and Miquelon
    </li><li>
      Portugal
    </li><li>
      Réunion
    </li><li>
      Slovenia
    </li><li>
      Slovakia
    </li><li>
      San Marino
    </li><li>
      French Southern Territories
    </li><li>
      Vatican City
    </li><li>
      Kosovo
    </li><li>
      Mayotte
    </li></ul> <h2>Star wars movies</h2> <ul><li>
      A New Hope
    </li><li>
      The Empire Strikes Back
    </li><li>
      Return of the Jedi
    </li><li>
      The Phantom Menace
    </li><li>
      Attack of the Clones
    </li><li>
      Revenge of the Sith
    </li></ul></div></div></div><script>"
`;

exports[`Uses runtime config SSR 1`] = `
"<div id=\\"__layout\\"><div><h2>Countries</h2> <ul><li>
      Andorra
    </li><li>
      Austria
    </li><li>
      Åland
    </li><li>
      Belgium
    </li><li>
      Saint Barthélemy
    </li><li>
      Cyprus
    </li><li>
      Germany
    </li><li>
      Estonia
    </li><li>
      Spain
    </li><li>
      Finland
    </li><li>
      France
    </li><li>
      French Guiana
    </li><li>
      Guadeloupe
    </li><li>
      Greece
    </li><li>
      Ireland
    </li><li>
      Italy
    </li><li>
      Lithuania
    </li><li>
      Luxembourg
    </li><li>
      Latvia
    </li><li>
      Monaco
    </li><li>
      Montenegro
    </li><li>
      Saint Martin
    </li><li>
      Martinique
    </li><li>
      Malta
    </li><li>
      Netherlands
    </li><li>
      Saint Pierre and Miquelon
    </li><li>
      Portugal
    </li><li>
      Réunion
    </li><li>
      Slovenia
    </li><li>
      Slovakia
    </li><li>
      San Marino
    </li><li>
      French Southern Territories
    </li><li>
      Vatican City
    </li><li>
      Kosovo
    </li><li>
      Mayotte
    </li></ul> <h2>Star wars movies</h2> <ul><li>
      A New Hope
    </li><li>
      The Empire Strikes Back
    </li><li>
      Return of the Jedi
    </li><li>
      The Phantom Menace
    </li><li>
      Attack of the Clones
    </li><li>
      Revenge of the Sith
    </li></ul></div></div></div><script>"
`;

exports[`Using batch queries SSR 1`] = `
"<div id=\\"__layout\\"><div><h2>Countries using EUR</h2> <ul><li>
      Andorra
    </li><li>
      Austria
    </li><li>
      Åland
    </li><li>
      Belgium
    </li><li>
      Saint Barthélemy
    </li><li>
      Cyprus
    </li><li>
      Germany
    </li><li>
      Estonia
    </li><li>
      Spain
    </li><li>
      Finland
    </li><li>
      France
    </li><li>
      French Guiana
    </li><li>
      Guadeloupe
    </li><li>
      Greece
    </li><li>
      Ireland
    </li><li>
      Italy
    </li><li>
      Lithuania
    </li><li>
      Luxembourg
    </li><li>
      Latvia
    </li><li>
      Monaco
    </li><li>
      Montenegro
    </li><li>
      Saint Martin
    </li><li>
      Martinique
    </li><li>
      Malta
    </li><li>
      Netherlands
    </li><li>
      Saint Pierre and Miquelon
    </li><li>
      Portugal
    </li><li>
      Réunion
    </li><li>
      Slovenia
    </li><li>
      Slovakia
    </li><li>
      San Marino
    </li><li>
      French Southern Territories
    </li><li>
      Vatican City
    </li><li>
      Kosovo
    </li><li>
      Mayotte
    </li></ul> <h2>Countries using AUD</h2> <ul><li>
      Australia
    </li><li>
      Cocos [Keeling] Islands
    </li><li>
      Christmas Island
    </li><li>
      Heard Island and McDonald Islands
    </li><li>
      Kiribati
    </li><li>
      Norfolk Island
    </li><li>
      Nauru
    </li><li>
      Tuvalu
    </li></ul></div></div></div><script>"
`;

exports[`With .gql Import SSR 1`] = `
"<div id=\\"__layout\\"><div><h2>Countries</h2> <ul><li>
      Andorra
    </li><li>
      Austria
    </li><li>
      Åland
    </li><li>
      Belgium
    </li><li>
      Saint Barthélemy
    </li><li>
      Cyprus
    </li><li>
      Germany
    </li><li>
      Estonia
    </li><li>
      Spain
    </li><li>
      Finland
    </li><li>
      France
    </li><li>
      French Guiana
    </li><li>
      Guadeloupe
    </li><li>
      Greece
    </li><li>
      Ireland
    </li><li>
      Italy
    </li><li>
      Lithuania
    </li><li>
      Luxembourg
    </li><li>
      Latvia
    </li><li>
      Monaco
    </li><li>
      Montenegro
    </li><li>
      Saint Martin
    </li><li>
      Martinique
    </li><li>
      Malta
    </li><li>
      Netherlands
    </li><li>
      Saint Pierre and Miquelon
    </li><li>
      Portugal
    </li><li>
      Réunion
    </li><li>
      Slovenia
    </li><li>
      Slovakia
    </li><li>
      San Marino
    </li><li>
      French Southern Territories
    </li><li>
      Vatican City
    </li><li>
      Kosovo
    </li><li>
      Mayotte
    </li></ul> <h2>Star wars movies</h2> <ul><li>
      A New Hope
    </li><li>
      The Empire Strikes Back
    </li><li>
      Return of the Jedi
    </li><li>
      The Phantom Menace
    </li><li>
      Attack of the Clones
    </li><li>
      Revenge of the Sith
    </li></ul></div></div></div><script>"
`;

exports[`With AST SSR 1`] = `
"<div id=\\"__layout\\"><div><h2>Countries</h2> <ul><li>
      Andorra
    </li><li>
      Austria
    </li><li>
      Åland
    </li><li>
      Belgium
    </li><li>
      Saint Barthélemy
    </li><li>
      Cyprus
    </li><li>
      Germany
    </li><li>
      Estonia
    </li><li>
      Spain
    </li><li>
      Finland
    </li><li>
      France
    </li><li>
      French Guiana
    </li><li>
      Guadeloupe
    </li><li>
      Greece
    </li><li>
      Ireland
    </li><li>
      Italy
    </li><li>
      Lithuania
    </li><li>
      Luxembourg
    </li><li>
      Latvia
    </li><li>
      Monaco
    </li><li>
      Montenegro
    </li><li>
      Saint Martin
    </li><li>
      Martinique
    </li><li>
      Malta
    </li><li>
      Netherlands
    </li><li>
      Saint Pierre and Miquelon
    </li><li>
      Portugal
    </li><li>
      Réunion
    </li><li>
      Slovenia
    </li><li>
      Slovakia
    </li><li>
      San Marino
    </li><li>
      French Southern Territories
    </li><li>
      Vatican City
    </li><li>
      Kosovo
    </li><li>
      Mayotte
    </li></ul> <h2>Star wars movies</h2> <ul><li>
      A New Hope
    </li><li>
      The Empire Strikes Back
    </li><li>
      Return of the Jedi
    </li><li>
      The Phantom Menace
    </li><li>
      Attack of the Clones
    </li><li>
      Revenge of the Sith
    </li></ul></div></div></div><script>"
`;
